fixed flex wrap issue

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ p {
 
 .links > a {
   text-decoration: none;
-  color: rgba(149, 117, 205, .7)
+  color: rgba(237, 232, 234, .95);
 }
 
 .links > a:hover {
@@ -95,6 +95,11 @@ p {
   color: #ad1457;
 }
 
+.tech-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .tech {
     background-color: #ad1457;
     padding: 5px;
@@ -102,6 +107,7 @@ p {
     margin: 3px;
     padding-left: 10px;
     padding-right: 10px;
+
 }
 
 @media (max-width: 800px) {
